more cleanup