@@ -688,7 +688,7 @@ public class SeekableStreamSupervisorStateTest extends EasyMockSupport
     EasyMock.expect(spec.getDataSchema()).andReturn(getDataSchema()).anyTimes();
     EasyMock.expect(spec.getIoConfig()).andReturn(new SupervisorIOConfigBuilder.DefaultSupervisorIOConfigBuilder()
         .withStream("stream")
-        .withInputFormat(new JsonInputFormat(new JSONPathSpec(true, ImmutableList.of()), ImmutableMap.of(), false, false, false))
+        .withInputFormat(new JsonInputFormat(new JSONPathSpec(true, List.of()), Map.of(), false, false, false))
         .withReplicas(1)
         .withTaskCount(1)
         .withTaskDuration(new Period("PT1H"))
@@ -788,7 +788,7 @@ public class SeekableStreamSupervisorStateTest extends EasyMockSupport
     EasyMock.expect(spec.getContextValue("tags")).andReturn("").anyTimes();
     EasyMock.expect(spec.getIoConfig()).andReturn(new SupervisorIOConfigBuilder.DefaultSupervisorIOConfigBuilder()
         .withStream("stream")
-        .withInputFormat(new JsonInputFormat(new JSONPathSpec(true, ImmutableList.of()), ImmutableMap.of(), false, false, false))
+        .withInputFormat(new JsonInputFormat(new JSONPathSpec(true, List.of()), Map.of(), false, false, false))
         .withReplicas(1)
         .withTaskCount(1)
         .withTaskDuration(new Period("PT1H"))
@@ -1080,7 +1080,7 @@ public class SeekableStreamSupervisorStateTest extends EasyMockSupport
     DateTime startTime = DateTimes.nowUtc();
     SeekableStreamSupervisorIOConfig ioConfig = new SupervisorIOConfigBuilder.DefaultSupervisorIOConfigBuilder()
         .withStream(STREAM)
-        .withInputFormat(new JsonInputFormat(new JSONPathSpec(true, ImmutableList.of()), ImmutableMap.of(), false, false, false))
+        .withInputFormat(new JsonInputFormat(new JSONPathSpec(true, List.of()), Map.of(), false, false, false))
         .withReplicas(1)
         .withTaskCount(1)
         .withTaskDuration(new Period("PT1H"))
@@ -1293,7 +1293,7 @@ public class SeekableStreamSupervisorStateTest extends EasyMockSupport
     int stopTaskCount = 1;
     SeekableStreamSupervisorIOConfig ioConfig = new SupervisorIOConfigBuilder.DefaultSupervisorIOConfigBuilder()
         .withStream(STREAM)
-        .withInputFormat(new JsonInputFormat(new JSONPathSpec(true, ImmutableList.of()), ImmutableMap.of(), false, false, false))
+        .withInputFormat(new JsonInputFormat(new JSONPathSpec(true, List.of()), Map.of(), false, false, false))
         .withReplicas(1)
         .withTaskCount(3)
         .withTaskDuration(new Period("PT1H"))
@@ -1522,7 +1522,7 @@ public class SeekableStreamSupervisorStateTest extends EasyMockSupport
     DateTime startTime = DateTimes.nowUtc();
     SeekableStreamSupervisorIOConfig ioConfig = new SupervisorIOConfigBuilder.DefaultSupervisorIOConfigBuilder()
         .withStream(STREAM)
-        .withInputFormat(new JsonInputFormat(new JSONPathSpec(true, ImmutableList.of()), ImmutableMap.of(), false, false, false))
+        .withInputFormat(new JsonInputFormat(new JSONPathSpec(true, List.of()), Map.of(), false, false, false))
         .withReplicas(1)
         .withTaskCount(1)
         .withTaskDuration(new Period("PT1H"))
@@ -2774,7 +2774,7 @@ public class SeekableStreamSupervisorStateTest extends EasyMockSupport
     EasyMock.expect(spec.getDataSchema()).andReturn(getDataSchema()).anyTimes();
     EasyMock.expect(spec.getIoConfig()).andReturn(new SupervisorIOConfigBuilder.DefaultSupervisorIOConfigBuilder()
         .withStream("stream")
-        .withInputFormat(new JsonInputFormat(new JSONPathSpec(true, ImmutableList.of()), ImmutableMap.of(), false, false, false))
+        .withInputFormat(new JsonInputFormat(new JSONPathSpec(true, List.of()), Map.of(), false, false, false))
         .withReplicas(1)
         .withTaskCount(1)
         .withTaskDuration(new Period("PT1H"))
@@ -3140,7 +3140,7 @@ public class SeekableStreamSupervisorStateTest extends EasyMockSupport
   {
     return new SupervisorIOConfigBuilder.DefaultSupervisorIOConfigBuilder()
         .withStream("stream")
-        .withInputFormat(new JsonInputFormat(new JSONPathSpec(true, ImmutableList.of()), ImmutableMap.of(), false, false, false))
+        .withInputFormat(new JsonInputFormat(new JSONPathSpec(true, List.of()), Map.of(), false, false, false))
         .withReplicas(serverPriorityToReplicas == null
                       ? 1
                       : serverPriorityToReplicas.values().stream().mapToInt(Integer::intValue).sum())
